# Sovereign-IQ

./: .coverage  .gitignore  ALTERNATIVE_UI_OPTIONS.md  ATC_QUICK_REFERENCE.md  ATC_VISUALIZER_QUICKSTART.md  BATCH_SCANNER_FLOW.md  CHECK_LIST.md  CODE_REVIEW.md  COMBINED_STRATEGY_CODE_REVIEW.md  COMBINED_STRATEGY_IMPROVEMENTS.md  ENHANCE_FUTURES.md  LICENSE  LIST_TEST.md  PERFORMANCE_ANALYZER_REVIEW.md  QUANT_METRICS_USAGE_REPORT.md  QUICKSTART_UI.md  QUICK_START_API_KEYS.md  README.md  README_UI.md  REORGANIZATION_PLAN.md  SECURITY.md  TFT_IMPLEMENTATION_ROADMAP.md  TODO.md  TROUBLESHOOTING.md  add-approximate-mas-benchmark.md  add-approximate-mas-to-batch-scanner.md  atc_rust.pyi  auto-num-threads-implementation.md  build_rust.bat  build_rust.ps1  check_optuna.py  check_ports.py  check_rust.ps1  clean_cache.py  clean_frontend.bat  conftest.py  crypto_prediction.py  crypto_simple_enhance.py  crypto_ui_gradio.py  debug_imports.py  (+80 more)
.claude/: CLAUDE.md  settings.local.json
.cursor/: source_mcp.txt  source_rules.txt  source_skills.txt  trades_table_output.txt
.opencode/plans/: phase5_completion.md
artifacts/deep/: dataset_metadata.pkl  model_config.json  training_config.json
artifacts/models/: random_forest_model.joblib
cli/: __init__.py  argument_parser.py  display.py
config/: __init__.py  common.py  config_api.py  config_api.py.example  decision_matrix.py  deep_learning.py  evaluation.py  forex_pairs.py  gemini_chart_analyzer.py  hmm.py  iching.py  lstm.py  model_features.py  pairs_trading.py  portfolio.py  position_sizing.py  random_forest.py  range_oscillator.py  spc.py  spc_enhancements.py  xgboost.py
core/: README.md  __init__.py  hybrid_analyzer.py  signal_calculators.py  voting_analyzer.py
core/voting_analyzer/: __init__.py  analyzer.py  params.py  signal_calculation.py  voting.py  workflow.py
docs/: API_DOCUMENTATION.md  DataFetcher.md  HMM_CONFIG_OPTIMIZATION.md  HMM_CONFIG_OPTIMIZATION_SUMMARY.md  HMM_SCORING_IMPROVEMENTS.md  OPENAPI_EXTENDED.md  PortfolioCorrelationAnalyzer.md  README.md  deeplearning_dataset.md  openapi.json  openapi.yaml  setup_tradingview_credentials.md
legacy/: crypto_simple.py  crypto_ui.py
main/: __init__.py  main_atc.py  main_atc_oscillator.py  main_deeplearning_prediction.py  main_hmm.py  main_pairs_trading.py  main_portfolio_manager.py  main_simplified_percentile_clustering.py  main_xgboost.py
modules/: CorrelationAnalyzer.py  DataFetcher.py  ExchangeManager.py  HedgeFinder.py  PortfolioCorrelationAnalyzer.py  PortfolioRiskCalculator.py  RiskCalculator.py  __init__.py  batch_scanner_config_20260120_151744.json  batch_scanner_config_20260120_153821.json  batch_scanner_config_20260120_162255.json  batch_scanner_config_20260120_162622.json  config.py  deeplearning_data_pipeline.py  deeplearning_dataset.py  deeplearning_model.py  feature_selection.py  utils.py  xgboost_prediction_cli.py  xgboost_prediction_display.py  xgboost_prediction_labeling.py  xgboost_prediction_model.py  xgboost_prediction_utils.py
modules/adaptive_trend/: __init__.py  atc.py  equity.py  layer1.py  moving_averages.py  scanner.py  signal_atc.py  signal_atc_test.py  signals.py  utils.py
modules/adaptive_trend_LTS/: NSIGHT_DEBUG_GUIDE.md  README.md  SETTINGS_GUIDE.md
modules/adaptive_trend_LTS/rust_extensions/: Cargo.toml  README.md  build_cuda.ps1  debug_function_template.rs  pyproject.toml  rust_installation_guide.md
modules/adaptive_trend_LTS/rust_extensions/.cargo/: config.toml
modules/adaptive_trend_LTS/rust_extensions/benches/: kama_benchmark.rs  ma_benchmark.rs  persistence_benchmark.rs
modules/adaptive_trend_LTS/rust_extensions/src/: batch_processing.rs  batch_processing_cpu.rs  equity.rs  equity_cuda.rs  lib.rs  liquidity_metrics.rs  ma_calculations.rs  ma_cuda.rs  signal_cuda.rs  signal_persistence.rs  utils.rs
modules/adaptive_trend_enhance/: IMPLEMENTATION_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_TASKS.md  README.md  __init__.py  signal_atc.py  signal_atc_test.py
modules/adaptive_trend_enhance_v2/: README.md
modules/adaptive_trend_enhance_v2/rust_extensions/: Cargo.toml  README.md  bench_output.txt  pyproject.toml  rust_installation_guide.md
modules/adaptive_trend_enhance_v2/rust_extensions/benches/: equity_benchmark.rs
modules/adaptive_trend_enhance_v2/rust_extensions/src/: equity.rs  kama.rs  lib.rs  ma_calculations.rs  signal_persistence.rs
modules/adaptive_trend_enhance_v2/rust_extensions/tests/: integration_tests.rs
modules/atr_targets/: README.md  __init__.py
modules/backtester/: README.md  __init__.py  main.py
modules/common/: ARCHITECTURE.md  DataFetcher.py  ExchangeManager.py  IndicatorEngine.py  ProgressBar.py  README.md  __init__.py  utils.py
modules/decision_matrix/: README.md  __init__.py  classifier.py  source_pine.txt
modules/deeplearning/: TFT_IMPLEMENTATION_ROADMAP.md  __init__.py  data_pipeline.py  dataset.py  environment_setup.py  feature_selection.py  model.py
modules/gemini_chart_analyzer/: ENHANCE_FUTURE.md  README.md  __init__.py
modules/hmm/: README.md  __init__.py  high_order.py  hmm_kama.py  kama.py  signal_combiner.py  (+4 more)
scripts/: export_openapi.py  profile_benchmark_comparison.py  verify_cuda_env.py
setup/: QUICK_START_API_KEYS.md  README.md  SECURITY.md  setup_api_keys.bat  setup_api_keys.ps1  setup_api_keys.sh
tests/: TEST_MEMORY_USAGE_GUIDE.md  conftest.py  conftest_optimized.py  performance_benchmark.py  performance_detailed.py  performance_fixtures.py  test_cli_argument_parser.py  test_cli_display.py  test_config.py  test_config_api.py  test_data_factories.py  test_labeling.py  test_main_atc_oscillator_spc_hybrid.py  test_main_atc_oscillator_spc_voting.py  test_main_cal_position_totals.py  test_main_gemini_chart_web_server.py  test_main_hybrid.py  test_main_lstm.py  test_main_position_sizing.py  test_main_voting.py  test_prediction_utils.py  test_progress_bar.py  test_random_forest_name_clarification.py  test_risk_calculator.py  test_xgboost_prediction_main.py
versions/: v1.0.1.md
web/: MIGRATION_SUMMARY.md  README.md  README_OLD.md  __init__.py  app.py
(+1298 files in other folders)
