[package]
name = "atc_rust"
version = "0.1.5"
edition = "2021"

[lib]
name = "atc_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.15"
rayon = "1.8"  # For parallel processing
# cudarc: requires exactly one CUDA version feature (cuda-12080 = 12.8; cuda-12090 = 12.9; etc.)
cudarc = { version = "0.19", features = ["driver", "nvrtc", "cuda-12080"] }

[profile.release]
# Enable optimizations for SIMD auto-vectorization
opt-level = 3
lto = "thin"
codegen-units = 1
# Use native CPU features for SIMD
# Note: Users can override with: RUSTFLAGS="-C target-cpu=native" cargo build --release

[profile.bench]
# Used by criterion for cargo bench; debug = true improves flamegraph symbol resolution
debug = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "equity_benchmark"
harness = false

[[bench]]
name = "kama_benchmark"
harness = false

[[bench]]
name = "persistence_benchmark"
harness = false

[[bench]]
name = "ma_benchmark"
harness = false
